[package]
name = "iasc"
description = "an Ip-address And Subnet-mask Calculator"
version = "0.1.0"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://gitlab.com/haruki7049/iasc"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
